 - Added screenshot to file feature (bmp, jpg, gif, png, tiff). [Jeff B]
 - Added screenshot to separate window feature. [Jeff B]
 - Added the preferences window. [Jeff B]
 - Added option to disable execution upon loading. [Jeff B]
 - Many more strings are translatable now. [Jeff B]
 - Default screen color now black (better represents being "off" and easier on eyes at night) [Jeff B]

0.7.2 -> 0.7.3
 gtk-glade:
  - Full localization using intltool/gettext. [evilynux]
 general:
  - Added a README.TRANSLATION documenting the localization process. [evilynux]
 MacOS X:
  - Initial version of the Mac interface added. [Jeff B]

0.7.1 -> 0.7.2
 spu:
  - big endian fixes. [cyberwarriorx]
 gpu:
  - big endian fixes. [marcus_c]
 gtk-glade:
  - opengl improvements. [masscat]
 general:
  - Added support for setting NDS firmware language value. [masscat]
  - Function added for setting firmware language. [masscat]
  - Mac/msys compilation fixes. [cyberwarriorx]
  - Fix compilation when pkg-config macros are not available [evilynux]

0.7.0 -> 0.7.1
 general:
  - Added GDB debugger stub [masscat]
  - Added new/different GBAMP CFlash image reader/writer [masscat]
 gpu:
  - Major speedup to the 2D core [shash]
 gtk-glade:
  - Added command line options. [masscat]
  - Added FPS limiter [masscat]
 cli:
  - Added command line options. [masscat]
  - Added FPS limiter [masscat]
  - Added option to use OpenGl to render window (allows resizing). [masscat]
 windows port:
  - Added command line options. [masscat]
  - Added multiple language support [cyberwarriorx]
  - Added Danish language translation [thomas-2007]

0.6.0 -> 0.7.0
 general:
  - Added support for *.duc files [cyberwarriorx]
 gpu:
  - Added support for sprite rotation/scaling [shash]
  - Added support for the 3D core (openGL and null plugins) [shash] 
 windows port:
  - A bunch of fixes [Dmitry Krutskih]
  - Fixed a bug in sound that was causing it to still not work for some
    people [cyberwarriorx]
 gtk: